# pytorch-start

./: 02Full.ipynb  03Customization.ipynb  04Conv.ipynb  pyproject.toml
01Poly/: 01Poly.ipynb
03Customization/: 03Customization.ipynb
04Conv/: 04Conv.ipynb
05ResNet/: 05ResNet.ipynb
06RNN/: 06RNN.ipynb
07Hook/: 07Hook.ipynb
