[tool.poetry]
name = "th-start"
version = "0.1.0"
description = ""
authors = ["zend <zendwang040302@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
notebook = "^7.2.1"
tqdm = "^4.66.4"
numpy = "^1.26.4"
jupyter = "^1.0.0"
ipython = "^8.25.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
